Allowed user to enter email, amount and feature request before checkout. Once info is entered the user will be redirected to checkout and the amount entered will be the amount billed.

--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -10,7 +10,7 @@
         /*<![CDATA[*/
         var stripePublicKey = /*[[${stripePublicKey}]]*/ null;
         var amount = /*[[${amount}]]*/ null;
-        var email = /*[[${email}]]*/ null;
+        // var email = /*[[${email}]]*/ null;
 
         /*]]>*/
     </script>
