--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -7,12 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="stylesheet" href="checkout.css" />
     <script th:inline="javascript">
+
         /*<![CDATA[*/
         var stripePublicKey = /*[[${stripePublicKey}]]*/ null;
         var amount = /*[[${amount}]]*/ null;
-        // var email = /*[[${email}]]*/ null;
-
+        var email = /*[[${email}]]*/ null;
+        var featureRequest = /*[[${featureRequest}]]*/ null;
         /*]]>*/
+
     </script>
     <script src="https://js.stripe.com/v3/"></script>
     <script src="checkout.js" defer></script>
